Modification du titre de la page d'accueil

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}
+    {{ parent() }}
+    - Accueil
+{% endblock %}
 
 {% block body %}
     <section class="home-top">
