Affichage dynamique de la page d'un centre médical

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-    {% include 'layout/_header.html.twig' %}
+    {% include 'layout/_header.html.twig' with {healthcare_center_name: block('healthcare_center_name')} %}
 
     {% include 'layout/_nav.html.twig' %}
 
