--- a/templates/healthcare_center/show.html.twig
+++ b/templates/healthcare_center/show.html.twig
@@ -27,34 +27,14 @@
             <article>
                 <h3>Horaires d'ouverture</h3>
                 <table class="opening-hours">
-                    <tr>
-                        <td>Lundi</td>
-                        <td class="hours">9h - 17h</td>
-                    </tr>
-                    <tr class="today">
-                        <td>Mardi</td>
-                        <td class="hours">9h - 17h</td>
-                    </tr>
-                    <tr>
-                        <td>Mercredi</td>
-                        <td class="hours">9h - 17h</td>
-                    </tr>
-                    <tr>
-                        <td>Jeudi</td>
-                        <td class="hours">9h - 17h</td>
-                    </tr>
-                    <tr>
-                        <td>Vendredi</td>
-                        <td class="hours">9h - 17h</td>
-                    </tr>
-                    <tr>
-                        <td>Samedi</td>
-                        <td class="hours">9h - 12h</td>
-                    </tr>
-                    <tr>
-                        <td>Dimanche</td>
-                        <td class="hours">Fermé</td>
-                    </tr>
+                    {% for openingHour in healthcare_center.openingHours %}
+                        <tr class="{{ openingHour.today ? 'today' }}">
+                            <td>{{ openingHour.weekday }}</td>
+                            <td class="hours">
+                                {{ openingHour.formattedTime }}
+                            </td>
+                        </tr>
+                    {% endfor %}
                 </table>
             </article>
             <article>
