--- a/templates/healthcare_center/show.html.twig
+++ b/templates/healthcare_center/show.html.twig
@@ -42,28 +42,14 @@
     <section class="doctors">
         <div class="container">
             <article>
-                <form class="form-appointment">
+                {{ form_start(form, {'attr': {'class': 'form-appointment'}}) }}
                     <h3>Prendre rendez-vous</h3>
-                    <input type="text" required placeholder="Nom">
-                    <input type="text" required placeholder="Prénom">
-                    <input type="email" placeholder="Email">
-                    <input type="tel" required placeholder="Téléphone">
-                    <input type="date" required placeholder="Date">
-                    <input type="time" step="900" required placeholder="Heure">
-                    <select required >
-                        <option disabled selected>Choisissez une spécialité</option>
-                        <option>Médecin Généraliste</option>
-                        <option>Dentiste</option>
-                        <option>Infirmier</option>
-                        <option>Homéopathe</option>
-                        <option>Osthéopathe</option>
-                    </select>
-                    <textarea placeholder="Votre message"></textarea>
+                    {{ form_widget(form) }}
                     <button type="submit" class="btn btn-light">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="currentColor" d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
                         Envoyer
                     </button>
-                </form>
+                {{ form_end(form) }}
             </article>
             {% for doctor in healthcare_center.doctors %}
                 <article class="doctor-thumbnail">
