CRUD de HealthcareCenter

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -27,6 +27,9 @@
                 <a href="{{ path('app_admin_skill_index') }}" class="list-group-item list-group-item-action {{ current_path starts with 'app_admin_skill_' ? 'active' }}">
                     Compétences
                 </a>
+                <a href="{{ path('app_admin_healthcare_center_index') }}" class="list-group-item list-group-item-action {{ current_path starts with 'app_admin_healthcare_center_' ? 'active' }}">
+                    Centres de santé
+                </a>
             </div>
         </aside>
         <main class="col-md-9">
