Création du CRUD de l'entité Doctor

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -30,6 +30,9 @@
                 <a href="{{ path('app_admin_healthcare_center_index') }}" class="list-group-item list-group-item-action {{ current_path starts with 'app_admin_healthcare_center_' ? 'active' }}">
                     Centres de santé
                 </a>
+                <a href="{{ path('app_admin_doctor_index') }}" class="list-group-item list-group-item-action {{ current_path starts with 'app_admin_doctor_' ? 'active' }}">
+                    Docteurs
+                </a>
             </div>
         </aside>
         <main class="col-md-9">
