--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,16 @@
 
     {% include 'layout/_header.html.twig' with {healthcare_center_name: block('healthcare_center_name')} %}
 
+    <div class="container flashes">
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
+
     {% include 'layout/_nav.html.twig' %}
 
     <main>
